# whatsapp-chat-analyze

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
whatsapp_chat_analyze/: cli.py
